--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -1,4 +1,4 @@
-name: Hello World
+name: Date
 
 on:
   push:
@@ -15,20 +15,27 @@ jobs:
 
     steps:
       - name: Passo 1
-        run: env | sort
+        run: date
   
   job2:
     name: Segundo Job
     runs-on: windows-latest
     steps:
       - name: Passo 1
-        run: "Get-ChildItem Env: | Sort-Object Name"
-        
+        run: date
+  
   job3:
     name: Terceiro Job
+    runs-on: macos-latest
+    steps:
+      - name: Passo 1
+        run: date
+        
+  job4:
+    name: Quarto Job
     runs-on: ubuntu-latest
-    needs: [job1, job2]
+    needs: [job1, job2, job3]
     
     steps:
       - name: Ultimo passo
-        run: echo Passo final
+        run: date
