--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js Pipeline
 
 on:
   push:
-    branches: [ no-branch ]
+    branches: [ main ]
   pull_request:
-    branches: [ no-branch ]
+    branches: [ main ]
     
 
 jobs:
@@ -15,71 +15,23 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 14
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 14
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test --if-present
-  
-  
-  prettier:
-    name: Prettier
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        # Make sure the actual branch is checked out when running on pull requests
-        ref: ${{ github.head_ref }}
-
-    - name: Prettify code
-      uses: creyD/prettier_action@v3.1
-      with:
-        # This part is also where you can pass other options, for example:
-        prettier_options: --write **/*.{js,md}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
-  
-  linter:
-    name: Lint code base
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-        with:
-          # Full git history is needed to get a proper list of changed files within `super-linter`
-          fetch-depth: 0
-      # Run Linter against code base #
-      - name: Lint Code Base
-        uses: github/super-linter@v3
-        env:
-          VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VALIDATE_CSS: true
-          VALIDATE_MARKDOWN: true
-          JAVASCRIPT_DEFAULT_STYLE: prettier
-  
-  
+      
   deploy:
     runs-on: ubuntu-latest
     env:
       DB_URI: $${{ secrets.DB_URI }}
       NODE_ENV: production
       
-    needs: [build, prettier]
+    needs: [build]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
@@ -91,12 +43,12 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.10.9 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: pedrolacerda-local-library
-          heroku_email: pedrohrl1@gmail.com
+          heroku_app_name: app-impacta-leandrosilveira97
+          heroku_email: ca4fae45-f47a-4b28-b5d0-fd9e7f39fae4
           justlogin: true
       
       - name: Set Heroku remote
-        run: heroku git:remote -a pedrolacerda-local-library
+        run: heroku git:remote -a app-impacta-leandrosilveira97
       
       - name: Set env variables
         run: |
