--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,13 +25,44 @@ jobs:
     - run: npm run build --if-present
     - run: npm test --if-present
       
-  deploy:
+  deploy-homologacao:
+    runs-on: ubuntu-latest
+    env:
+      DB_URI: $${{ secrets.DB_URI }}
+          
+    needs: [build]
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+        with:
+          # Full git history is needed to build on Heroku
+          fetch-depth: 0
+      
+      - name: Login Heroku
+        uses: akhileshns/heroku-deploy@v3.10.9 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: app-impacta-leandrosilveira97h
+          heroku_email: ca4fae45-f47a-4b28-b5d0-fd9e7f39fae4
+          justlogin: true
+      
+      - name: Set Heroku remote
+        run: heroku git:remote -a app-impacta-leandrosilveira97h
+      
+      - name: Set env variables
+        run: |
+          heroku config:set MONGODB_URI=${{ env.DB_URI }}
+      
+      - name: Push code to Heroku
+        run: git push heroku main
+        
+  deploy-producao:
     runs-on: ubuntu-latest
     env:
       DB_URI: $${{ secrets.DB_URI }}
       NODE_ENV: production
       
-    needs: [build]
+    needs: [deploy-homologacao]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
@@ -57,3 +88,4 @@ jobs:
       
       - name: Push code to Heroku
         run: git push heroku main
+
